@@ -377,7 +377,7 @@ setRlibs <-
 	    printLog(Log, "directory ", sQuote(test_dir), " not found\n")
 	}
         if (dir.exists(tests_dir) && # trackObjs has only *.Rin
-            length(dir(tests_dir, pattern = "\\.(R|Rin)$")))
+            length(dir(tests_dir, pattern = "\\.(R|r|Rin)$")))
             run_tests()
 
         ## Check package vignettes.
@@ -2146,7 +2146,50 @@ setRlibs <-
                                     indent = 2, exdent = 2), collapse = "\n"),
                       "\nPlease remove from your package.\n")
         }
-
+        
+        ## Did the vignettes get updated in inst/doc?
+        inst_doc_files <- list.files(file.path(pkgdir, "inst", "doc"), 
+                                     recursive = TRUE)
+        vignette_files <- list.files(vign_dir, recursive = TRUE)
+        if (length(vignette_files)) {
+            if (!length(inst_doc_files)) {
+        	warningLog(Log)
+		any <- TRUE
+		msg <- c("Files in the 'vignettes' directory but no files in 'inst/doc':",
+	                 strwrap(paste(sQuote(vignette_files), collapse = ", "),
+	                         indent = 2L, exdent = 4L),
+	                 "")
+        	printLog0(Log, paste(msg, collapse = "\n"))
+            } else {
+        	vignette_times <- file.mtime(file.path(vign_dir, vignette_files))
+        	inst_doc_times <- file.mtime(file.path(pkgdir, "inst", "doc", inst_doc_files))
+        	if (max(vignette_times) > max(inst_doc_times)) {
+        	    warningLog(Log)
+		    any <- TRUE
+		    msg <- c("Files in the 'vignettes' directory newer than all files in 'inst/doc':",
+		             strwrap(paste(sQuote(vignette_files[vignette_times > max(inst_doc_times)]), 
+		                           collapse = ", "),
+		                     indent = 2L, exdent = 4L),
+		             "")
+		    keep <- vignette_times <= max(inst_doc_times)
+		    vignette_files <- vignette_files[keep]
+		    vignette_times <- vignette_times[keep]
+        	    printLog0(Log, paste(msg, collapse = "\n"))
+        	}
+        	matches <- match(vignette_files, inst_doc_files)
+        	newer <- !is.na(matches) & vignette_times > inst_doc_times[matches]
+        	if (any(newer)) {
+        	    warningLog(Log)
+		    any <- TRUE
+		    msg <- c("Files in the 'vignettes' directory newer than same file in 'inst/doc':",
+		             strwrap(paste(sQuote(vignette_files[newer]), 
+		                           collapse = ", "),
+		                     indent = 2L, exdent = 4L),
+		             "")
+        	    printLog0(Log, paste(msg, collapse = "\n"))   
+        	}
+            }
+        }
         if (!any) resultLog(Log, "OK")
     }
 
@@ -4927,7 +4970,7 @@ setRlibs <-
             dir.exists(file.path(pkgdir, "R"))) {
             tests_dir <- file.path(pkgdir, test_dir)
             if (dir.exists(tests_dir) &&
-                length(dir(tests_dir, pattern = "\\.(R|Rin)$")))
+                length(dir(tests_dir, pattern = "\\.(r|R|Rin)$")))
                 no_examples <- FALSE
             vigns <- pkgVignettes(dir = pkgdir)
             if (!is.null(vigns) && length(vigns$docs)) no_examples <- FALSE
